--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -3,7 +3,7 @@
 .token.selector,
 .token.selector .class,
 .token.function {
-    /*@apply text-fuchsia-400;*/
+    @apply text-fuchsia-400;
 }
 
 .token.attr-name,
@@ -12,7 +12,7 @@
 .token.operator,
 .token.pseudo-class,
 .token.important {
-    /*@apply text-cyan-400;*/
+    @apply text-cyan-400;
 }
 
 .token.attr-value,
@@ -21,13 +21,13 @@
 .token.number,
 .token.unit,
 .token.color {
-    /*@apply text-lime-300;*/
+    @apply text-lime-300;
 }
 
 .token.punctuation,
 .token.module,
 .token.property {
-    /*@apply text-light-blue-200;*/
+    @apply text-light-blue-200;
 }
 
 .token.atapply .token:not(.rule):not(.important) {
@@ -43,26 +43,26 @@
 }
 
 .token.comment {
-    /*@apply text-gray-400;*/
+    @apply text-gray-400;
 }
 
 .token.deleted:not(.prefix) {
-    /*@apply relative block -mx-4 px-4;*/
+    @apply relative block -mx-4 px-4;
 }
 
 .token.deleted:not(.prefix)::after {
     content: '';
-    /*@apply pointer-events-none absolute inset-0 block bg-rose-400 bg-opacity-25;*/
+    @apply pointer-events-none absolute inset-0 block bg-rose-400 bg-opacity-25;
 }
 
 .token.deleted.prefix {
-    /*@apply text-gray-400 select-none;*/
+    @apply text-gray-400 select-none;
 }
 
 .token.inserted:not(.prefix) {
-    /*@apply block bg-emerald-700 bg-opacity-50 -mx-4 px-4;*/
+    @apply block bg-emerald-700 bg-opacity-50 -mx-4 px-4;
 }
 
 .token.inserted.prefix {
-    /*@apply text-emerald-200 text-opacity-75 select-none;*/
+    @apply text-emerald-200 text-opacity-75 select-none;
 }
